# linux

./: README.md  f1.c  new_file2
Admin_Linux/AdminLinux_Task1/: .LinuxAdmin_task1.sh.swp
Admin_Linux/AdminLinux_Tasl2/: BinarySearch.CPP  Binarysearch.txt
Admin_Linux/exam/: while_loop_exercise.sh
Admin_Linux/task3/: task3.sh
Admin_Linux/task4/: TASK4.sh
Embedded_Linux/task3/: main1.elf
Embedded_Linux/task5/: README.md
Embedded_Linux/task6/cmake_calc/: CMakeLists.txt  main.c
Embedded_Linux/task6/cmake_calc/Include/: addition.h  division.h  modulus.h  multiplication.h  subtraction.h
Embedded_Linux/task6/cmake_calc/Lib/: addition.c  division.c  modulus.c  multiplication.c
